<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="500dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".MainActivity">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/welcome"
    android:textStyle="bold"
    android:textSize="20sp"
    android:layout_marginTop="13dp"
    android:layout_gravity="center_horizontal"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/math"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/math"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="number"
        android:hint="@string/enter_score"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/physics"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/physics"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="number"
        android:hint="@string/enter_score"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chemistry"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/chemistry"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="number"
        android:hint="@string/enter_score"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/biology"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/biology"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="number"
        android:hint="@string/enter_score"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/english"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/english"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="number"
        android:hint="@string/enter_score"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/econs"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/economics"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="number"
        android:hint="@string/enter_score"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agric"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/agric"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="number"
        android:hint="@string/enter_score"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fmath"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/fmath"
        android:layout_width="match_parent"
        android:inputType="number"
        android:layout_height="37sp"
        android:hint="@string/enter_score"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_grade"
        android:onClick="getGrade"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"/>



</LinearLayout>
</ScrollView>